# number-plate-recognition-backend

./: README.md  add_missing_data.py  main.py  pyproject.toml  routers.py  server.py  visualize.py
